# unity-entt

./: .gitmodules  LICENSE.md  README.md
NativeScript/: .gitignore  CMakeLists.txt  CMakeSettings.json
NativeScript/Source/Bindings/: Bindings.cpp  Bindings.h  ECSBindings.cpp
NativeScript/Source/Game/: NativeScript.cpp  NativeScript.h  PluginMain.cpp  Profiler.h  Universal.cpp  Universal.h
NativeScript/Source/Simulation/: Game.cpp  Game.h  World.cpp  World.h
NativeScript/Source/Simulation/Components/: BodySize.h  CollisionLayer.h  Cooldown.h  CurrentWave.h  Damage.h  Destination.h  ElapsedTime.h  EnemyTeam.h  Health.h  LifeTime.h  MoveSpeed.h  Orientation.h  Position.h  RangeDetection.h  RemoveMe.h  WaveSpawnSettings.h  WaypointIndex.h  WaypointSettings.h
NativeScript/Source/Simulation/Context/: GameSettings.h  GameStates.h
NativeScript/Source/Simulation/Helpers/: CooldownHelpers.cpp  CooldownHelpers.h  SpawnHelpers.cpp  SpawnHelpers.h
NativeScript/Source/Simulation/Systems/: All.h  DecreaseCooldown.cpp  EntityDie.cpp  FetchWorldSettings.cpp  InitWorldStates.cpp  MoveForward.cpp  QueryCollision.cpp  RemoveEntity.cpp  SingleFiring.cpp  TestSpawn.cpp  UpdateRemainingLifeTime.cpp  WaveSpawn.cpp  WaypointMovement.cpp
NativeScript/Targets/: .gitignore
NativeScript/Targets/Generators/: VS2019.bat  VS2019_Standalone.bat
Tools/BindingsGenerator/: .gitignore  BindingsGenerator.csproj  BindingsGenerator.sln  Program.cs
Tools/BindingsGenerator/Common/: CommonPath.cs  Debug.cs  StringUtilities.cs
Tools/BindingsGenerator/CppParserLib/: CppParser.cs  CppParserLib.csproj  ParseResult.cs
Tools/BindingsGenerator/CppParserLib/Properties/: AssemblyInfo.cs
Tools/BindingsGenerator/Default/: DefaultBindings.cs
Tools/BindingsGenerator/ECS/: ECSBindings.cs  ECSNaming.cs  ECSParseResultUtilities.cs
Tools/BindingsGenerator/Properties/: AssemblyInfo.cs
UnityProject/Assets/Animators/: Male.controller
UnityProject/Assets/Game/Maps/: Map1_Geometry.unity
UnityProject/Assets/Game/Scripts/: InputManager.cs
UnityProject/Assets/Game/Scripts/Maps/: GeometryBasicGenerator.cs
UnityProject/Assets/Game/Scripts/Native/: AbstractBaseNativeScript.cs  BaseNativeEntityView.cs  EventHub.cs  GameSettings.cs  NativeGameState.cs  NativeHelpers.cs
UnityProject/Assets/Game/Scripts/UI/: GUI.cs  GameInfo.cs
UnityProject/Assets/Game/Scripts/Views/: EntityCooldownView.cs  EntityHealthBarView.cs  EntityPositionView.cs
UnityProject/Assets/NativeScript/: Bindings.cs  BootScene.unity  BootScript.cs  ECSBindings.cs  NativeScriptTypes.json
UnityProject/Assets/NativeScript/Editor/: EditorMenus.cs
UnityProject/Assets/Plugins/: .gitignore
UnityProject/Assets/Resources/Prefabs/: CannonTowerView.prefab  EnemyEntityHealthBarView.prefab  EntityCooldownView.prefab  EntityView.prefab  SphereBulletView.prefab
UnityProject/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF.asset
UnityProject/Assets/ToonyTinyPeople/TT_demo/: ToonyTiny_Citizens_Megapack.tga  ToonyTiny_City_Pack.tga  ToonyTiny_Zombies_Pack.tga
UnityProject/Assets/ToonyTinyPeople/TT_demo/animation/female/: f_death_A.FBX  f_idle_A.FBX  f_melee_combat_idle.FBX  f_melee_combat_run_rm.FBX  f_run.FBX  f_run_rm.FBX  f_walk.FBX  f_walk_rm.FBX
UnityProject/Assets/ToonyTinyPeople/TT_demo/animation/male/: m_idle_A.FBX  m_melee_combat_attack_A.FBX  m_melee_combat_run.FBX  m_pistol_idle_A.FBX  m_pistol_run.FBX  m_pistol_run_rm.FBX  m_pistol_shoot.FBX  m_run.FBX  m_run_rm.FBX  m_walk.FBX  m_walk_rm.FBX
UnityProject/Assets/ToonyTinyPeople/TT_demo/animation/zombie/: Z_attack_A.FBX  Z_death_A.FBX  Z_idle_A.FBX  Z_run.FBX  Z_run_rm.FBX  Z_walk.FBX  Z_walk_rm.FBX
UnityProject/Assets/ToonyTinyPeople/TT_demo/models/: TT_demo_female.FBX  TT_demo_male_A.FBX  TT_demo_male_B.FBX  TT_demo_police.FBX  TT_demo_zombie.FBX
UnityProject/Assets/ToonyTinyPeople/TT_demo/models/Materials/: TT_demo.mat  TT_demo_texture.tga
UnityProject/Assets/ToonyTinyPeople/TT_demo/prefabs/: TT_demo_female.prefab  TT_demo_male_A.prefab  TT_demo_male_B.prefab  TT_demo_police.prefab  TT_demo_zombie.prefab
UnityProject/Assets/ToonyTinyPeople/TT_demo/sample_scene/: TT_Citizens_sample_scene.unity  ground.mat  quad.tga
UnityProject/Assets/TowerDefenseKit/: detail_crystal.fbx  detail_crystalLarge.fbx  detail_dirt.fbx  detail_dirtLarge.fbx  detail_rocks.fbx  detail_rocksLarge.fbx  detail_tree.fbx  detail_treeLarge.fbx  enemy_ufoGreen.fbx  enemy_ufoGreenWeapon.fbx  enemy_ufoPurple.fbx  enemy_ufoPurpleWeapon.fbx  enemy_ufoRed.fbx  enemy_ufoRedWeapon.fbx  enemy_ufoYellow.fbx  enemy_ufoYellowWeapon.fbx  snow_detail_crystal.fbx  snow_detail_crystalLarge.fbx  snow_detail_dirt.fbx  snow_detail_dirtLarge.fbx  snow_detail_rocks.fbx  snow_detail_rocksLarge.fbx  snow_detail_tree.fbx  snow_detail_treeLarge.fbx  snow_tile.fbx  snow_tile_bump.fbx  snow_tile_cornerInner.fbx  snow_tile_cornerLarge.fbx  snow_tile_cornerOuter.fbx  snow_tile_cornerRound.fbx  snow_tile_cornerSquare.fbx  snow_tile_crossing.fbx  snow_tile_crystal.fbx  snow_tile_end.fbx  snow_tile_endRound.fbx  snow_tile_endRoundSpawn.fbx  snow_tile_endSpawn.fbx  snow_tile_hill.fbx  snow_tile_riverBridge.fbx  snow_tile_riverCorner.fbx  (+106 more)
UnityProject/Assets/TowerDefenseKit/Materials/: highlighted.mat
UnityProject/ProjectSettings/: ProjectSettings.asset
